@@ -7,7 +7,7 @@ plugins {
     id "de.undercouch.download" version "4.0.0"
     id 'java'
     // https://github.com/tbroyer/gradle-errorprone-plugin
-    id "net.ltgt.errorprone" version "0.6.1"
+    id "net.ltgt.errorprone" version "1.1.0"
     // https://plugins.gradle.org/plugin/org.ajoberstar.grgit
     id 'org.ajoberstar.grgit' version '3.1.1' apply false
 }
@@ -76,7 +76,7 @@ allprojects {
     //   * any new checkers have been added,
     //   * the patch level is 9 (keep the patch level as a single digit), or
     //   * backward-incompatible changes have been made to APIs or elsewhere.
-    version '2.11.0'
+    version '2.11.1'
 
     repositories {
         mavenCentral()
@@ -108,15 +108,14 @@ allprojects {
                 classpath += files(project(':checker').tasks.getByName('shadowJar').archivePath)
                 options.taglets 'org.checkerframework.taglet.ManualTaglet'
                 options.tagletPath(project(':framework-test').sourceSets.taglet.output.classesDirs.getFiles() as File[])
-                options.links = ['https://docs.oracle.com/javase/8/docs/api/', 'https://docs.oracle.com/javase/8/docs/jdk/api/javac/tree/']
+                options.links = ['https://docs.oracle.com/en/java/javase/11/docs/api/', 'https://docs.oracle.com/en/java/javase/11/docs/jdk/api/javac/tree/']
                 // This file is looked for by Javadoc.
                 file("${destinationDir}/resources/fonts/").mkdirs()
                 ant.touch(file: "${destinationDir}/resources/fonts/dejavu.css")
             }
         }
 
-	/// TODO: This should be enabled selectively, but not everywhere yet because it would require
-	/// exhaustive @param Javadoc tags throughout.  (Fails on Travis, cannot reproduce locally.)
+	/// TODO: One day we can enable this.  For now, CI jobs require Javadoc on changed lines.
 	// // Turn Javadoc warnings into errors.
 	// tasks.withType(Javadoc) {
 	//     options.addStringOption('Xwerror', '-quiet')
@@ -126,10 +125,37 @@ allprojects {
         tasks.withType(JavaCompile) {
             dependsOn(':installGitHooks')
             sourceCompatibility = 8
-            if (isJava8) {
-                //  option --add-exports not allowed with target 1.8
-                targetCompatibility = 8
-            }
+            targetCompatibility = 8
+            // Because the target is 8, all of the public compiler classes are accessible, so
+            // --add-exports are not required, (nor are they allowed with target 8). See
+            // https://openjdk.java.net/jeps/247 for details on compiling for older versions.
+
+            // When sourceCompatibilty is changed to 11, then the following will be required.
+            // options.compilerArgs += [
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            // ]
+            // This is equivalent to writing "exports jdk.compiler/... to ALL-UNNAMED" in the
+            // module-info.java of jdk.compiler, so corresponding --add-opens are only required for
+            // reflective access to private members.
+            //
+            // From https://openjdk.java.net/jeps/261, Section titled: "Breaking encapsulation"
+            // "The effect of each instance [of --add-exports] is to add a qualified export of the
+            // named package from the source module to the target module. This is, essentially, a
+            // command-line form of an exports clause in a module declaration[...].
+            // [...]
+            // The --add-exports option enables access to the public types of a specified package.
+            // It is sometimes necessary to go further and enable access to all non-public elements
+            // via the setAccessible method of the core reflection API. The --add-opens option can
+            // be used, at run time, to do this."
+
             options.failOnError = true
             options.deprecation = true
             options.compilerArgs += [
@@ -139,19 +165,7 @@ allprojects {
                     "-Xlint:-options",
                     "-Xlint",
             ]
-            if (!isJava8) {
-                options.compilerArgs += [
-                    "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                    "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                    "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                    "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                    "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                    "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-                    "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                    "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                    "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                ]
-            }
+
             options.encoding = 'UTF-8'
             options.fork = true
             if (isJava8) {
@@ -542,21 +556,36 @@ subprojects {
                                 "-verbose:summary",
                                 "-javacoptions:-g",
                                 "-keywords:!ignore",
-                                '-samevm',
+                                "-samevm",
+                                "-javacoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
+                                // Required for checker/jtreg/nullness/PersistUtil.java and other tests
+                                "-vmoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
                         ]
                         if (isJava8) {
+                            // Use Error Prone javac and source/target 8
                             args += [
-                                // Required for checker/jtreg/nullness/PersistUtil.java and other tests
-                                "-vmoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}:" +
-                                        "${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
+                                "-vmoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}",
                                 "-javacoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}",
                                 "-javacoptions:-source 8",
                                 "-javacoptions:-target 8"
                                 ]
-                        }
-                        if (project.name.is('checker')) {
+                            if (project.name.is('checker')) {
+                                args += [
+                                        "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
+                                ]
+                            }
+                        } else {
                             args += [
-                                    "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
+                                    // checker/jtreg/nullness/defaultsPersist/ReferenceInfoUtil.java
+                                    // uses the jdk.jdeps module.
+                                    "-javacoptions:--add-modules jdk.jdeps",
+                                    "-javacoptions:--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
+                            ]
+                        }
+                        if (project.name.is('framework')) {
+                            // Do not check for the annotated JDK
+                            args += [
+                                    "-javacoptions:-Anocheckjdk"
                             ]
                         }
 
@@ -578,18 +607,15 @@ subprojects {
 
         // Configure JUnit tests
         tasks.withType(Test) {
-            if (!isJava8) {
+            if (isJava8) {
+                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
+            } else {
+                // Without this, the test throw "java.lang.OutOfMemoryError: Java heap space"
+                forkEvery(1)
                 jvmArgs += [
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                    ]
+                        "--illegal-access=warn",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                ]
             }
 
             if (project.name.is('checker')) {
@@ -599,10 +625,6 @@ subprojects {
 
             if (project.hasProperty('emit.test.debug')) {
                 systemProperties += ["emit.test.debug": 'true']
-            }
-
-            if (isJava8) {
-                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
             }
 
             testLogging {
@@ -795,7 +817,7 @@ task releaseBuild(type: GradleBuild) {
     description 'Build everything required for a release'
     startParameter = new StartParameter()
     startParameter.setProjectProperties(release: true)
-    // This downloads rather than builds the jdk8.jar because that's what is used in all the Travis tests.
+    // This downloads rather than builds the jdk8.jar because that's what is used in the CI tests.
     tasks = ['clean', 'assemble', 'sourcesJar', 'javadocJar', 'allJavadoc', 'framework:allJavadocJar', 'framework:allSourcesJar', 'checker:allJavadocJar', 'checker:allSourcesJar']
 }
 
